--- a/tanks.css
+++ b/tanks.css
@@ -20,6 +20,22 @@ canvas {
     margin: 21px auto 0 auto;
 }
 
+.paused-info-panel,
+.game-over-info-panel,
+.welcome-menu-info-panel,
+.level-info-panel {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    text-align: center;
+    line-height: 1.7em;
+    background: #000;
+    display: none;
+    padding-top: 100px;
+}
+
 .labels {
     margin: 0 0 0 10px;
     white-space: nowrap;
@@ -27,4 +43,8 @@ canvas {
 
 .labels p:first-child {
     margin-top: 0;
+}
+
+.new-best-score {
+    display: none;
 }
